--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -24,7 +24,7 @@
     "edit": "Edycja",
     "select_date_range": "Wybierz zakres dat",
     "add_comment": "Dodaj komentarz",
-
+    "no_second": "Brak drugiego odbicia",
     "start": "Początek",
     "end": "Koniec",
     "apply": "Zastosuj",
