--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,6 +70,7 @@
     "september": "September",
     "october": "October",
     "november": "November",
-    "december": "December"
+    "december": "December",
+    "no_second": "No second check"
   }
   
