--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,6 +81,9 @@
     "delete_log": "Delate log",
     "previous_week": "Previous Week",
     "current_week": "Current week",
+    "select_break_type": "Select break type",
+    "private_exit": "Private exit",
+    "business_exit": "Bussines exit",
     "change_view": "Change_view"
 
   }
