--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -81,7 +81,11 @@
     "delete_log": "Usuń log",
     "previous_week": "Poprzedni tydzień",
     "current_week": "Obecny tydzień",
-    "change_view": "Zmnień widok"
+    "select_break_type": "Wybierz typ wyjścia",
+    "private_exit": "Wyjście prywatne",
+    "business_exit": "Wyjście służbowe",
+
+    "change_view": "Zmień widok"
 
 
   }
